--- a/packages/server/Dockerfile
+++ b/packages/server/Dockerfile
@@ -3,10 +3,11 @@ FROM node:13.10.1-alpine3.11
 RUN mkdir -p /usr/app
 WORKDIR /usr/app
 
-COPY package.json ./
-RUN yarn
+ENV NODE_ENV=development
 
 COPY . .
+
+RUN yarn
 
 EXPOSE 3000
 
