--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -12,5 +12,5 @@
     "noImplicitAny": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "src/database/seeds"]
 }
