--- a/packages/server/.eslintrc
+++ b/packages/server/.eslintrc
@@ -12,6 +12,7 @@
     "class-methods-use-this": "off",
     "consistent-return": "off",
     "@typescript-eslint/camelcase": "off",
+    "@typescript-eslint/ban-ts-ignore": "off",
     "camelcase": "off",
     "func-names": "off",
     "no-param-reassign": "off",
