--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,12 +4,22 @@
   "private": true,
   "license": "MIT",
   "scripts": {
-    "start": "node ./dist/server.js",
-    "dev": "ts-node-dev src/server.ts",
-    "build": "tsc"
+    "serve": "node ./dist/server.js",
+    "dev:docker": "docker-compose -f docker-compose.dev.yml up",
+    "dev": "nodemon src/server.ts",
+    "build": "tsc",
+    "db:create": "createdb fastfeet",
+    "db:migrate": "yarn sequelize db:migrate",
+    "db:seed": "yarn sequelize db:seed:all",
+    "db:up": "yarn db:create && yarn db:migrate && yarn db:seed"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "pg": "^7.18.2",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^5.21.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.3",
@@ -20,8 +30,10 @@
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-prettier": "^3.1.2",
+    "nodemon": "^2.0.2",
     "prettier": "^1.19.1",
-    "ts-node-dev": "^1.0.0-pre.44",
+    "sequelize-cli": "^5.5.1",
+    "sucrase": "^3.12.1",
     "typescript": "^3.8.3"
   }
 }
