enhance: Docker development setup

--- a/packages/server/.env.example
+++ b/packages/server/.env.example
@@ -1,4 +1,5 @@
-DB_HOST=localhost
+# if you are using a local database you can chage the host to localhost
+DB_HOST=postgres
 DB_NAME=fastfeet
 DB_PASS=fastfeet
 DB_USER=postgres
