--- a/packages/server/docker-compose.dev.yml
+++ b/packages/server/docker-compose.dev.yml
@@ -1,26 +1,28 @@
 version: '3'
 
 services:
+  postgres:
+    image: postgres
+    ports:
+      - '5432:5432'
+    restart: unless-stopped
+    # logging:
+    # driver: none
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER:-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-fastfeet}
+      POSTGRES_DB: fastfeet
+
   app:
     build: 
       context: .
       dockerfile: dev.Dockerfile
-    command: yarn dev
+    command: bash -c 'yarn db:migrate && yarn dev'
     ports:
       - '3000:3000'
     volumes:
       - './:/usr/src/app'
       - '/usr/src/app/node_modules'
     depends_on:
-      - 'postgres'
+      - postgres
 
-  postgres:
-    image: postgres
-    ports:
-      - '5432:5432'
-    restart: unless-stopped
-    logging:
-      driver: none
-    environment:
-      POSTGRES_USER: ${POSTGRES_USER:-postgres}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-fastfeet}
