--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -8,7 +8,7 @@
     "dev:docker": "docker-compose -f docker-compose.dev.yml up",
     "dev": "nodemon src/server.ts",
     "build": "tsc",
-    "db:create": "createdb fastfeet",
+    "db:create": "createdb fastfeet --user=postgres",
     "db:migrate": "yarn sequelize db:migrate",
     "db:seed": "yarn sequelize db:seed:all",
     "db:up": "yarn db:create && yarn db:migrate && yarn db:seed"
@@ -22,7 +22,10 @@
     "sequelize": "^5.21.5"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/bluebird": "^3.5.30",
     "@types/express": "^4.17.3",
+    "@types/validator": "^12.0.1",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
     "@typescript-eslint/parser": "^2.23.0",
     "eslint": "^6.8.0",
