--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,7 +11,11 @@
     "db:create": "createdb fastfeet --user=postgres",
     "db:migrate": "yarn sequelize db:migrate",
     "db:seed": "yarn sequelize db:seed:all",
-    "db:up": "yarn db:create && yarn db:migrate && yarn db:seed"
+    "db:up": "yarn db:create && yarn db:migrate && yarn db:seed",
+    "test": "NODE_ENV=test jest",
+    "test:watch": "NODE_ENV=test yarn pretest && jest --watch",
+    "pretest": "NODE_ENV=test sequelize db:migrate",
+    "posttest": "NODE_ENV=test sequelize db:migrate:undo:all"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -20,13 +24,16 @@
     "jsonwebtoken": "^8.5.1",
     "pg": "^7.18.2",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^5.21.5"
+    "sequelize": "^5.21.5",
+    "sqlite3": "^4.1.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/bluebird": "^3.5.30",
     "@types/express": "^4.17.3",
+    "@types/jest": "^25.1.4",
     "@types/jsonwebtoken": "^8.3.8",
+    "@types/supertest": "^2.0.8",
     "@types/validator": "^12.0.1",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
     "@typescript-eslint/parser": "^2.23.0",
@@ -35,10 +42,14 @@
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-prettier": "^3.1.2",
+    "jest": "^25.1.0",
     "nodemon": "^2.0.2",
     "prettier": "^1.19.1",
     "sequelize-cli": "^5.5.1",
-    "sucrase": "^3.12.1",
+    "supertest": "^4.0.2",
+    "ts-jest": "^25.2.1",
+    "ts-node": "^8.7.0",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^3.8.3"
   }
 }
