--- a/packages/server/.env.example
+++ b/packages/server/.env.example
@@ -1,5 +1,5 @@
-# if you are using a local database you can chage the host to localhost
-DB_HOST=postgres
+DB_HOST=localhost
 DB_NAME=fastfeet
 DB_PASS=fastfeet
 DB_USER=postgres
+APP_SECRET=supersecret
