--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -17,6 +17,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^7.18.2",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.5"
@@ -25,6 +26,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/bluebird": "^3.5.30",
     "@types/express": "^4.17.3",
+    "@types/jsonwebtoken": "^8.3.8",
     "@types/validator": "^12.0.1",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
     "@typescript-eslint/parser": "^2.23.0",
