--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -26,9 +26,9 @@
   },
   "include": ["src/**/*"],
   "exclude": [
-    "node_modules",
-    "src/__tests__",
-    "src/**/*.spec.ts",
-    "src/**/*.test.ts"
+    "node_modules"
+    // "src/__tests__",
+    // "src/**/*.spec.ts",
+    // "src/**/*.test.ts"
   ]
 }
