--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -11,6 +11,7 @@
     "noUnusedLocals": true,
     "noImplicitAny": true,
     "baseUrl": "src",
+    "allowJs": true,
     "paths": {
       "@models/*": ["app/models/*"],
       "@controllers/*": ["app/controllers/*"],
@@ -27,7 +28,7 @@
   "include": ["src/**/*"],
   "exclude": [
     "node_modules"
-    // "src/__tests__",
+    // "src/__tests__"
     // "src/**/*.spec.ts",
     // "src/**/*.test.ts"
   ]
