chore: Fix dev environment
- Added babel for compiling code;
- Added authentication for creating/updating recipients;

--- a/packages/server/.babelrc
+++ b/packages/server/.babelrc
@@ -19,6 +19,7 @@
         "alias": {
           "@models": "./src/app/models",
           "@controllers": "./src/app/controllers",
+          "@middlewares": "./src/app/middlewares",
           "@types": "./src/app/types",
           "@config": "./src/config",
           "@database": "./src/database",
