--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -23,7 +23,8 @@
     "pg": "^7.18.2",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.5",
-    "sqlite3": "^4.1.1"
+    "sqlite3": "^4.1.1",
+    "yup": "^0.28.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
@@ -39,6 +40,7 @@
     "@types/jsonwebtoken": "^8.3.8",
     "@types/supertest": "^2.0.8",
     "@types/validator": "^12.0.1",
+    "@types/yup": "^0.26.33",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
     "@typescript-eslint/parser": "^2.23.0",
     "babel-loader": "^8.1.0",
