--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -16,10 +16,14 @@
     "test:watch": "NODE_ENV=test jest --runInBand --watch"
   },
   "dependencies": {
+    "aws-sdk": "^2.648.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
     "pg": "^7.18.2",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.5",
@@ -33,11 +37,15 @@
     "@babel/plugin-transform-async-to-generator": "^7.8.3",
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-typescript": "^7.9.0",
+    "@types/aws-sdk": "^2.7.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/bluebird": "^3.5.30",
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.3",
+    "@types/faker": "^4.1.11",
     "@types/jest": "^25.1.4",
     "@types/jsonwebtoken": "^8.3.8",
+    "@types/multer": "^1.4.2",
     "@types/supertest": "^2.0.8",
     "@types/validator": "^12.0.1",
     "@types/yup": "^0.26.33",
@@ -50,6 +58,7 @@
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-prettier": "^3.1.2",
+    "faker": "^4.1.0",
     "jest": "^25.1.0",
     "prettier": "^1.19.1",
     "sequelize-cli": "^5.5.1",
